--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "modules/mysql"]
 	path = modules/mysql
-	url = https://github.com/camptocamp/puppet-mysql
+	url = http://github.com/camptocamp/puppet-mysql.git
 [submodule "modules/augeas"]
 	path = modules/augeas
-	url = https://github.com/camptocamp/puppet-augeas
+	url = http://github.com/camptocamp/puppet-augeas.git
+[submodule "modules/apache"]
+	path = modules/apache
+	url = http://github.com/camptocamp/puppet-apache.git
