Add a submodule for managing pacemaker.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "modules/common"]
 	path = modules/common
 	url = http://github.com/camptocamp/puppet-common.git
+[submodule "modules/pacemaker"]
+	path = modules/pacemaker
+	url = http://github.com/camptocamp/puppet-pacemaker.git
