Add the tomcat6 module.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "modules/oae"]
 	path = modules/oae
 	url = http://github.com/efroese/puppet-oae.git
+[submodule "modules/tomcat6"]
+	path = modules/tomcat6
+	url = http://github.com/efroese/puppet-tomcat6.git
