--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "modules/mysql"]
-	path = modules/mysql
-	url = http://github.com/camptocamp/puppet-mysql.git
 [submodule "modules/augeas"]
 	path = modules/augeas
 	url = http://github.com/camptocamp/puppet-augeas.git
@@ -19,3 +16,6 @@
 [submodule "modules/tomcat6"]
 	path = modules/tomcat6
 	url = http://github.com/efroese/puppet-tomcat6.git
+[submodule "modules/postgres"]
+	path = modules/postgres
+	url = http://github.com/efroese/puppet-postgres.git
