--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "modules/archive"]
 	path = modules/archive
 	url = http://github.com/camptocamp/puppet-archive.git
+[submodule "modules/cle"]
+	path = modules/cle
+	url = http://github.com/efroese/puppet-cle.git
