Add the solr module and fix the class names.

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,8 +34,8 @@
 [submodule "modules/cle"]
 	path = modules/cle
 	url = http://github.com/efroese/puppet-cle.git
-[submodule "puppet-sendmail"]
-	path = puppet-sendmail
+[submodule "modules/sendmail"]
+	path = modules/sendmail
 	url = http://github.com/efroese/puppet-sendmail.git
 [submodule "modules/solr"]
 	path = modules/solr
