Squashed commit of the following:
commit 1e3aacf4262effcdd890121a544e9eed1563a350
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 14:37:56 2012 -0400

    Add a vhost on port 80 to redirect to 443.

commit f8e76d5e7d987e3cc8feab48342cef7aafc5979f
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 14:21:06 2012 -0400

    SUBMODULE UPDATE apache vhost ssl template fix.

commit 5180635c67bac9118108074c1467b7cd716ad2d5
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 14:00:31 2012 -0400

    SUBMODULE UPDATE pacemake removed selinux.

commit 27bae6723e9718a735d8bf6902a8590f4c925d1b
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 13:56:44 2012 -0400

    Fix the path to the authkey file.

commit a69d71f10fe3269b40c2462d0398962ae48cd0c1
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 12:56:22 2012 -0400

    SUBMODULE UPDATE Remove package redeclaration.

commit 843241610cb42c7aff3019a66d54c920043f1c71
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 12:39:56 2012 -0400

    Fix the authkey_file parameter.

commit c67b6446056ea9f4f3d8b04f7898aa37fce8c1ba
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 12:37:59 2012 -0400

    Add the selinux module. Clean up HA config variables.

commit 447a524474690c06ab55e122e76a8f790c0f4479
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 12:29:30 2012 -0400

    SUBMODULE UPDATE syntax error.

commit 9a23f67c8ec2b5c8ae593c80d4249130d8792b3f
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 12:24:17 2012 -0400

    SUBMODULE UPDATE Add updated pacemaker and corosync module

commit 74ba05022020a9c977098d08e309ee69a5f1e121
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 12:22:00 2012 -0400

    Fix syntax.

commit 9b0cff0ef34084ba573f85ea3876d41b09365b69
Author: Erik Froese <erik.froese@gmail.com>
Date:   Thu Mar 22 12:01:46 2012 -0400

    Update the example to use Pacemaker and Corosync instead 

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "modules/solr"]
 	path = modules/solr
 	url = http://github.com/efroese/puppet-solr.git
+[submodule "modules/selinux"]
+	path = modules/selinux
+	url = http://github.com/camptocamp/puppet-selinux.git
