--- a/modules/sis/files/sis.properties
+++ b/modules/sis/files/sis.properties
@@ -83,6 +83,7 @@ termMap@com.rsmart.customer.integration.processor.cle.CleCourseProcessor= { "W11
 filename@com.rsmart.customer.integration.processor.cle.CleMembershipProcessor=\${staging.dir}/members.csv
 columns@com.rsmart.customer.integration.processor.cle.CleMembershipProcessor=3
 headerRowPresent@com.rsmart.customer.integration.processor.cle.CleMembershipProcessor=true
+deleteRoles@com.rsmart.customer.integration.processor.cle.CleMembershipProcessor=["Student"]
 
 # new membership properties for OAE
 
