ACAD-1090 Update the config_custom.json with a new key.

--- a/environments/acad-nightly/modules/localconfig/files/config_custom.json
+++ b/environments/acad-nightly/modules/localconfig/files/config_custom.json
@@ -19,6 +19,7 @@
         "USER_DEFAULT_ICON_URL": "/dev/images/default_User_icon_50x50.png",
         "USER_DEFAULT_ICON_URL_LARGE": "/dev/images/default_User_icon_100x100.png",
         "INFINITE_LOADING_ICON": "/dev/images/Infinite_Scrolling_Loader_v01.gif",
+        "I18N_CUSTOM_BUNDLE": "/dev/configuration/custom.properties",
 
         "BATCH": "/system/batch",
         "CAPTCHA_SERVICE": "/system/captcha",
